@@ -31,6 +31,6 @@ INCLUDES = -I$(top_srcdir)/src/libstruct \
 	-I$(top_srcdir)/src/libcachesystem \
 	-I$(top_srcdir)/src/libnetwork \
 	-I$(top_srcdir)/src/libesim \
-	-I$(top_srcdir)/src/libm2skernel \
+	-I$(top_srcdir)/src/libcpukernel \
 	-I$(top_srcdir)/src/libgpukernel
 
