@@ -1,6 +1,6 @@
 /*
  *  Multi2Sim
- *  Copyright (C) 2007  Rafael Ubal Tena (ubal@gap.upv.es)
+ *  Copyright (C) 2007  Rafael Ubal Tena (raurte@gap.upv.es)
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -33,7 +33,7 @@
 #include <fcntl.h>
 #include <assert.h>
 #include <signal.h>
-#include <cpudisasm.h>
+#include <disasm.h>
 #include <time.h>
 #include <pthread.h>
 #include <poll.h>
