@@ -19,6 +19,6 @@ INCLUDES = -I$(top_srcdir)/src/libstruct \
 	-I$(top_srcdir)/src/libcpudisasm \
 	-I$(top_srcdir)/src/libgpudisasm \
 	-I$(top_srcdir)/src/libgpukernel \
-	-I$(top_srcdir)/src/libm2skernel
+	-I$(top_srcdir)/src/libcpukernel
 
 
